--- a/docs/docs/integrations/vectorstores/chroma.ipynb
+++ b/docs/docs/integrations/vectorstores/chroma.ipynb
@@ -99,7 +99,7 @@
     "vector_store = Chroma(\n",
     "    collection_name=\"example_collection\",\n",
     "    embedding_function=embeddings,\n",
-    "    persist_directory=\"./chroma_langchain_db\" # Where to save data locally, remove if not neccesary\n",
+    "    persist_directory=\"./chroma_langchain_db\",  # Where to save data locally, remove if not neccesary\n",
     ")"
    ]
   },
@@ -174,73 +174,85 @@
     }
    ],
    "source": [
-    "from langchain_core.documents import Document\n",
     "from uuid import uuid4\n",
+    "\n",
+    "from langchain_core.documents import Document\n",
     "\n",
     "document_1 = Document(\n",
     "    page_content=\"I had chocalate chip pancakes and scrambled eggs for breakfast this morning.\",\n",
     "    metadata={\"source\": \"tweet\"},\n",
-    "    id=1\n",
+    "    id=1,\n",
     ")\n",
     "\n",
     "document_2 = Document(\n",
     "    page_content=\"The weather forecast for tomorrow is cloudy and overcast, with a high of 62 degrees.\",\n",
     "    metadata={\"source\": \"news\"},\n",
-    "    id=2\n",
+    "    id=2,\n",
     ")\n",
     "\n",
     "document_3 = Document(\n",
     "    page_content=\"Building an exciting new project with LangChain - come check it out!\",\n",
     "    metadata={\"source\": \"tweet\"},\n",
-    "    id=3\n",
+    "    id=3,\n",
     ")\n",
     "\n",
     "document_4 = Document(\n",
     "    page_content=\"Robbers broke into the city bank and stole $1 million in cash.\",\n",
     "    metadata={\"source\": \"news\"},\n",
-    "    id=4\n",
+    "    id=4,\n",
     ")\n",
     "\n",
     "document_5 = Document(\n",
     "    page_content=\"Wow! That was an amazing movie. I can't wait to see it again.\",\n",
     "    metadata={\"source\": \"tweet\"},\n",
-    "    id=5\n",
+    "    id=5,\n",
     ")\n",
     "\n",
     "document_6 = Document(\n",
     "    page_content=\"Is the new iPhone worth the price? Read this review to find out.\",\n",
     "    metadata={\"source\": \"website\"},\n",
-    "    id=6\n",
+    "    id=6,\n",
     ")\n",
     "\n",
     "document_7 = Document(\n",
     "    page_content=\"The top 10 soccer players in the world right now.\",\n",
     "    metadata={\"source\": \"website\"},\n",
-    "    id=7\n",
+    "    id=7,\n",
     ")\n",
     "\n",
     "document_8 = Document(\n",
     "    page_content=\"LangGraph is the best framework for building stateful, agentic applications!\",\n",
     "    metadata={\"source\": \"tweet\"},\n",
-    "    id=8\n",
+    "    id=8,\n",
     ")\n",
     "\n",
     "document_9 = Document(\n",
     "    page_content=\"The stock market is down 500 points today due to fears of a recession.\",\n",
     "    metadata={\"source\": \"news\"},\n",
-    "    id=9\n",
+    "    id=9,\n",
     ")\n",
     "\n",
     "document_10 = Document(\n",
     "    page_content=\"I have a bad feeling I am going to get deleted :(\",\n",
     "    metadata={\"source\": \"tweet\"},\n",
-    "    id=10\n",
+    "    id=10,\n",
     ")\n",
     "\n",
-    "documents = [document_1, document_2, document_3, document_4, document_5, document_6, document_7, document_8, document_9, document_10]\n",
+    "documents = [\n",
+    "    document_1,\n",
+    "    document_2,\n",
+    "    document_3,\n",
+    "    document_4,\n",
+    "    document_5,\n",
+    "    document_6,\n",
+    "    document_7,\n",
+    "    document_8,\n",
+    "    document_9,\n",
+    "    document_10,\n",
+    "]\n",
     "uuids = [str(uuid4()) for _ in range(len(documents))]\n",
     "\n",
-    "vector_store.add_documents(documents=documents,ids=uuids)"
+    "vector_store.add_documents(documents=documents, ids=uuids)"
    ]
   },
   {
@@ -263,18 +275,20 @@
     "updated_document_1 = Document(\n",
     "    page_content=\"I had chocalate chip pancakes and fried eggs for breakfast this morning.\",\n",
     "    metadata={\"source\": \"tweet\"},\n",
-    "    id=1\n",
+    "    id=1,\n",
     ")\n",
     "\n",
     "updated_document_2 = Document(\n",
     "    page_content=\"The weather forecast for tomorrow is sunny and warm, with a high of 82 degrees.\",\n",
     "    metadata={\"source\": \"news\"},\n",
-    "    id=2\n",
+    "    id=2,\n",
     ")\n",
     "\n",
-    "vector_store.update_document(document_id=uuids[0],document=updated_document_1)\n",
+    "vector_store.update_document(document_id=uuids[0], document=updated_document_1)\n",
     "# You can also update multiple documents at once\n",
-    "vector_store.update_documents(ids=uuids[:2],documents=[updated_document_1,updated_document_1])"
+    "vector_store.update_documents(\n",
+    "    ids=uuids[:2], documents=[updated_document_1, updated_document_1]\n",
+    ")"
    ]
   },
   {
@@ -329,7 +343,11 @@
     }
    ],
    "source": [
-    "results = vector_store.similarity_search(\"LangChain provides abstractions to make working with LLMs easy\", k=2, filter={\"source\": \"tweet\"})\n",
+    "results = vector_store.similarity_search(\n",
+    "    \"LangChain provides abstractions to make working with LLMs easy\",\n",
+    "    k=2,\n",
+    "    filter={\"source\": \"tweet\"},\n",
+    ")\n",
     "for res in results:\n",
     "    print(f\"* {res.page_content} [{res.metadata}]\")"
    ]
@@ -359,7 +377,9 @@
     }
    ],
    "source": [
-    "results = vector_store.similarity_search_with_score(\"Will it be hot tomorrow?\", k=1, filter={\"source\": \"news\"})\n",
+    "results = vector_store.similarity_search_with_score(\n",
+    "    \"Will it be hot tomorrow?\", k=1, filter={\"source\": \"news\"}\n",
+    ")\n",
     "for res, score in results:\n",
     "    print(f\"* [SIM={score:3f}] {res.page_content} [{res.metadata}]\")"
    ]
@@ -389,7 +409,9 @@
     }
    ],
    "source": [
-    "results = vector_store.similarity_search_by_vector(embedding=embeddings.embed_query(\"I love green eggs and ham!\"),k=1)\n",
+    "results = vector_store.similarity_search_by_vector(\n",
+    "    embedding=embeddings.embed_query(\"I love green eggs and ham!\"), k=1\n",
+    ")\n",
     "for doc in results:\n",
     "    print(f\"* {doc.page_content} [{doc.metadata}]\")"
    ]
@@ -427,8 +449,7 @@
    ],
    "source": [
     "retriever = vector_store.as_retriever(\n",
-    "    search_type=\"mmr\",\n",
-    "    search_kwargs={\"k\": 1, \"fetch_k\": 5}\n",
+    "    search_type=\"mmr\", search_kwargs={\"k\": 1, \"fetch_k\": 5}\n",
     ")\n",
     "retriever.invoke(\"Stealing from the bank is a crime\", filter={\"source\": \"news\"})"
    ]
@@ -487,8 +508,10 @@
     "\n",
     "prompt = hub.pull(\"rlm/rag-prompt\")\n",
     "\n",
+    "\n",
     "def format_docs(docs):\n",
     "    return \"\\n\\n\".join(doc.page_content for doc in docs)\n",
+    "\n",
     "\n",
     "rag_chain = (\n",
     "    {\"context\": retriever | format_docs, \"question\": RunnablePassthrough()}\n",
