--- a/docs/docs/integrations/vectorstores/pgvector.ipynb
+++ b/docs/docs/integrations/vectorstores/pgvector.ipynb
@@ -53,7 +53,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "docker run --name pgvector-container -e POSTGRES_USER=langchain -e POSTGRES_PASSWORD=langchain -e POSTGRES_DB=langchain -p 6024:5432 -d pgvector/pgvector:pg16"
+    "%docker run --name pgvector-container -e POSTGRES_USER=langchain -e POSTGRES_PASSWORD=langchain -e POSTGRES_DB=langchain -p 6024:5432 -d pgvector/pgvector:pg16"
    ]
   },
   {
@@ -291,7 +291,9 @@
     }
    ],
    "source": [
-    "results = vector_store.similarity_search(\"kitty\", k=10, filter={\"id\": {\"$in\": [1, 5, 2, 9]}})\n",
+    "results = vector_store.similarity_search(\n",
+    "    \"kitty\", k=10, filter={\"id\": {\"$in\": [1, 5, 2, 9]}}\n",
+    ")\n",
     "for doc in results:\n",
     "    print(f\"* {doc.page_content} [{doc.metadata}]\")"
    ]
@@ -388,7 +390,7 @@
     }
    ],
    "source": [
-    "results = vector_store.similarity_search_with_score(query=\"cats\",k=1)\n",
+    "results = vector_store.similarity_search_with_score(query=\"cats\", k=1)\n",
     "for doc, score in results:\n",
     "    print(f\"* [SIM={score:3f}] {doc.page_content} [{doc.metadata}]\")"
    ]
@@ -423,10 +425,7 @@
     }
    ],
    "source": [
-    "retriever = vector_store.as_retriever(\n",
-    "    search_type=\"mmr\",\n",
-    "    search_kwargs={\"k\": 1}\n",
-    ")\n",
+    "retriever = vector_store.as_retriever(search_type=\"mmr\", search_kwargs={\"k\": 1})\n",
     "retriever.invoke(\"kitty\")"
    ]
   },
@@ -484,8 +483,10 @@
     "\n",
     "prompt = hub.pull(\"rlm/rag-prompt\")\n",
     "\n",
+    "\n",
     "def format_docs(docs):\n",
     "    return \"\\n\\n\".join(doc.page_content for doc in docs)\n",
+    "\n",
     "\n",
     "rag_chain = (\n",
     "    {\"context\": retriever | format_docs, \"question\": RunnablePassthrough()}\n",
