--- a/docs/docs/integrations/vectorstores/redis.ipynb
+++ b/docs/docs/integrations/vectorstores/redis.ipynb
@@ -135,7 +135,7 @@
    },
    "outputs": [],
    "source": [
-    "%pip install --upgrade --quiet  redis redisvl langchain-community"
+    "%pip install -qU redis redisvl langchain-community"
    ]
   },
   {
@@ -303,63 +303,75 @@
     }
    ],
    "source": [
-    "from langchain_core.documents import Document\n",
     "from uuid import uuid4\n",
+    "\n",
+    "from langchain_core.documents import Document\n",
     "\n",
     "document_1 = Document(\n",
     "    page_content=\"I had chocalate chip pancakes and scrambled eggs for breakfast this morning.\",\n",
-    "    metadata={\"source\": \"tweet\"}\n",
+    "    metadata={\"source\": \"tweet\"},\n",
     ")\n",
     "\n",
     "document_2 = Document(\n",
     "    page_content=\"The weather forecast for tomorrow is cloudy and overcast, with a high of 62 degrees.\",\n",
-    "    metadata={\"source\": \"news\"}\n",
+    "    metadata={\"source\": \"news\"},\n",
     ")\n",
     "\n",
     "document_3 = Document(\n",
     "    page_content=\"Building an exciting new project with LangChain - come check it out!\",\n",
-    "    metadata={\"source\": \"tweet\"}\n",
+    "    metadata={\"source\": \"tweet\"},\n",
     ")\n",
     "\n",
     "document_4 = Document(\n",
     "    page_content=\"Robbers broke into the city bank and stole $1 million in cash.\",\n",
-    "    metadata={\"source\": \"news\"}\n",
+    "    metadata={\"source\": \"news\"},\n",
     ")\n",
     "\n",
     "document_5 = Document(\n",
     "    page_content=\"Wow! That was an amazing movie. I can't wait to see it again.\",\n",
-    "    metadata={\"source\": \"tweet\"}\n",
+    "    metadata={\"source\": \"tweet\"},\n",
     ")\n",
     "\n",
     "document_6 = Document(\n",
     "    page_content=\"Is the new iPhone worth the price? Read this review to find out.\",\n",
-    "    metadata={\"source\": \"website\"}\n",
+    "    metadata={\"source\": \"website\"},\n",
     ")\n",
     "\n",
     "document_7 = Document(\n",
     "    page_content=\"The top 10 soccer players in the world right now.\",\n",
-    "    metadata={\"source\": \"website\"}\n",
+    "    metadata={\"source\": \"website\"},\n",
     ")\n",
     "\n",
     "document_8 = Document(\n",
     "    page_content=\"LangGraph is the best framework for building stateful, agentic applications!\",\n",
-    "    metadata={\"source\": \"tweet\"}\n",
+    "    metadata={\"source\": \"tweet\"},\n",
     ")\n",
     "\n",
     "document_9 = Document(\n",
     "    page_content=\"The stock market is down 500 points today due to fears of a recession.\",\n",
-    "    metadata={\"source\": \"news\"}\n",
+    "    metadata={\"source\": \"news\"},\n",
     ")\n",
     "\n",
     "document_10 = Document(\n",
     "    page_content=\"I have a bad feeling I am going to get deleted :(\",\n",
-    "    metadata={\"source\": \"tweet\"}\n",
+    "    metadata={\"source\": \"tweet\"},\n",
     ")\n",
     "\n",
-    "documents = [document_1, document_2, document_3, document_4, document_5, document_6, document_7, document_8, document_9, document_10]\n",
+    "documents = [\n",
+    "    document_1,\n",
+    "    document_2,\n",
+    "    document_3,\n",
+    "    document_4,\n",
+    "    document_5,\n",
+    "    document_6,\n",
+    "    document_7,\n",
+    "    document_8,\n",
+    "    document_9,\n",
+    "    document_10,\n",
+    "]\n",
     "uuids = [str(uuid4()) for _ in range(len(documents))]\n",
     "\n",
-    "vector_store.add_documents(documents=documents,ids=uuids)"
+    "vector_store.add_documents(documents=documents, ids=uuids)"
    ]
   },
   {
@@ -536,7 +548,9 @@
     }
    ],
    "source": [
-    "results = vector_store.similarity_search(\"LangChain provides abstractions to make working with LLMs easy\", k=2)\n",
+    "results = vector_store.similarity_search(\n",
+    "    \"LangChain provides abstractions to make working with LLMs easy\", k=2\n",
+    ")\n",
     "for res in results:\n",
     "    print(f\"* {res.page_content} [{res.metadata}]\")"
    ]
@@ -589,56 +603,7 @@
    "outputs": [],
    "source": [
     "# write the schema to a yaml file\n",
-    "rds.write_schema(\"redis_schema.yaml\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The schema file for this example should look something like:\n",
-    "\n",
-    "```yaml\n",
-    "numeric:\n",
-    "- name: age\n",
-    "  no_index: false\n",
-    "  sortable: false\n",
-    "text:\n",
-    "- name: user\n",
-    "  no_index: false\n",
-    "  no_stem: false\n",
-    "  sortable: false\n",
-    "  weight: 1\n",
-    "  withsuffixtrie: false\n",
-    "- name: job\n",
-    "  no_index: false\n",
-    "  no_stem: false\n",
-    "  sortable: false\n",
-    "  weight: 1\n",
-    "  withsuffixtrie: false\n",
-    "- name: credit_score\n",
-    "  no_index: false\n",
-    "  no_stem: false\n",
-    "  sortable: false\n",
-    "  weight: 1\n",
-    "  withsuffixtrie: false\n",
-    "- name: content\n",
-    "  no_index: false\n",
-    "  no_stem: false\n",
-    "  sortable: false\n",
-    "  weight: 1\n",
-    "  withsuffixtrie: false\n",
-    "vector:\n",
-    "- algorithm: FLAT\n",
-    "  block_size: 1000\n",
-    "  datatype: FLOAT32\n",
-    "  dims: 1536\n",
-    "  distance_metric: COSINE\n",
-    "  initial_cap: 20000\n",
-    "  name: content_vector\n",
-    "```\n",
-    "\n",
-    "**Notice**, this include **all** possible fields for the schema. You can remove any fields that you don't need."
+    "vector_store.write_schema(\"redis_schema.yaml\")"
    ]
   },
   {
@@ -685,7 +650,7 @@
    ],
    "source": [
     "# see the schemas are the same\n",
-    "new_rds.schema == rds.schema"
+    "new_rds.schema == vector_store.schema"
    ]
   },
   {
@@ -750,6 +715,8 @@
     "    \"text\": [{\"name\": \"user\"}, {\"name\": \"job\"}],\n",
     "    \"numeric\": [{\"name\": \"age\"}],\n",
     "}\n",
+    "texts = []  # list of texts\n",
+    "metadata = {}  # dictionary of metadata\n",
     "\n",
     "rds, keys = Redis.from_texts_return_keys(\n",
     "    texts,\n",
@@ -1010,8 +977,10 @@
     "\n",
     "prompt = hub.pull(\"rlm/rag-prompt\")\n",
     "\n",
+    "\n",
     "def format_docs(docs):\n",
     "    return \"\\n\\n\".join(doc.page_content for doc in docs)\n",
+    "\n",
     "\n",
     "rag_chain = (\n",
     "    {\"context\": retriever | format_docs, \"question\": RunnablePassthrough()}\n",
