--- a/docs/docs/integrations/vectorstores/elasticsearch.ipynb
+++ b/docs/docs/integrations/vectorstores/elasticsearch.ipynb
@@ -68,7 +68,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "docker run -p 9200:9200 -e \"discovery.type=single-node\" -e \"xpack.security.enabled=false\" -e \"xpack.security.http.ssl.enabled=false\" docker.elastic.co/elasticsearch/elasticsearch:8.12.1"
+    "%docker run -p 9200:9200 -e \"discovery.type=single-node\" -e \"xpack.security.enabled=false\" -e \"xpack.security.http.ssl.enabled=false\" docker.elastic.co/elasticsearch/elasticsearch:8.12.1"
    ]
   },
   {
@@ -115,7 +115,7 @@
     "    index_name=\"langchain_index\",\n",
     "    embedding=embeddings,\n",
     "    es_user=\"elastic\",\n",
-    "    es_password=\"changeme\"\n",
+    "    es_password=\"changeme\",\n",
     ")"
    ]
   },
@@ -159,7 +159,7 @@
     "    index_name=\"test_index\",\n",
     "    embedding=embeddings,\n",
     "    es_user=\"elastic\",\n",
-    "    es_password=\"changeme\"\n",
+    "    es_password=\"changeme\",\n",
     ")"
    ]
   },
@@ -208,9 +208,7 @@
     "from langchain_elasticsearch import ElasticsearchStore\n",
     "\n",
     "vector_store = ElasticsearchStore(\n",
-    "    \"langchain-demo\",\n",
-    "    embedding=embeddings,\n",
-    "    es_url=\"http://localhost:9201\"\n",
+    "    \"langchain-demo\", embedding=embeddings, es_url=\"http://localhost:9201\"\n",
     ")"
    ]
   },
@@ -254,63 +252,75 @@
     }
    ],
    "source": [
-    "from langchain_core.documents import Document\n",
     "from uuid import uuid4\n",
+    "\n",
+    "from langchain_core.documents import Document\n",
     "\n",
     "document_1 = Document(\n",
     "    page_content=\"I had chocalate chip pancakes and scrambled eggs for breakfast this morning.\",\n",
-    "    metadata={\"source\": \"tweet\"}\n",
+    "    metadata={\"source\": \"tweet\"},\n",
     ")\n",
     "\n",
     "document_2 = Document(\n",
     "    page_content=\"The weather forecast for tomorrow is cloudy and overcast, with a high of 62 degrees.\",\n",
-    "    metadata={\"source\": \"news\"}\n",
+    "    metadata={\"source\": \"news\"},\n",
     ")\n",
     "\n",
     "document_3 = Document(\n",
     "    page_content=\"Building an exciting new project with LangChain - come check it out!\",\n",
-    "    metadata={\"source\": \"tweet\"}\n",
+    "    metadata={\"source\": \"tweet\"},\n",
     ")\n",
     "\n",
     "document_4 = Document(\n",
     "    page_content=\"Robbers broke into the city bank and stole $1 million in cash.\",\n",
-    "    metadata={\"source\": \"news\"}\n",
+    "    metadata={\"source\": \"news\"},\n",
     ")\n",
     "\n",
     "document_5 = Document(\n",
     "    page_content=\"Wow! That was an amazing movie. I can't wait to see it again.\",\n",
-    "    metadata={\"source\": \"tweet\"}\n",
+    "    metadata={\"source\": \"tweet\"},\n",
     ")\n",
     "\n",
     "document_6 = Document(\n",
     "    page_content=\"Is the new iPhone worth the price? Read this review to find out.\",\n",
-    "    metadata={\"source\": \"website\"}\n",
+    "    metadata={\"source\": \"website\"},\n",
     ")\n",
     "\n",
     "document_7 = Document(\n",
     "    page_content=\"The top 10 soccer players in the world right now.\",\n",
-    "    metadata={\"source\": \"website\"}\n",
+    "    metadata={\"source\": \"website\"},\n",
     ")\n",
     "\n",
     "document_8 = Document(\n",
     "    page_content=\"LangGraph is the best framework for building stateful, agentic applications!\",\n",
-    "    metadata={\"source\": \"tweet\"}\n",
+    "    metadata={\"source\": \"tweet\"},\n",
     ")\n",
     "\n",
     "document_9 = Document(\n",
     "    page_content=\"The stock market is down 500 points today due to fears of a recession.\",\n",
-    "    metadata={\"source\": \"news\"}\n",
+    "    metadata={\"source\": \"news\"},\n",
     ")\n",
     "\n",
     "document_10 = Document(\n",
     "    page_content=\"I have a bad feeling I am going to get deleted :(\",\n",
-    "    metadata={\"source\": \"tweet\"}\n",
+    "    metadata={\"source\": \"tweet\"},\n",
     ")\n",
     "\n",
-    "documents = [document_1, document_2, document_3, document_4, document_5, document_6, document_7, document_8, document_9, document_10]\n",
+    "documents = [\n",
+    "    document_1,\n",
+    "    document_2,\n",
+    "    document_3,\n",
+    "    document_4,\n",
+    "    document_5,\n",
+    "    document_6,\n",
+    "    document_7,\n",
+    "    document_8,\n",
+    "    document_9,\n",
+    "    document_10,\n",
+    "]\n",
     "uuids = [str(uuid4()) for _ in range(len(documents))]\n",
     "\n",
-    "vector_store.add_documents(documents=documents,ids=uuids)"
+    "vector_store.add_documents(documents=documents, ids=uuids)"
    ]
   },
   {
@@ -374,7 +384,11 @@
     }
    ],
    "source": [
-    "results = vector_store.similarity_search(query=\"LangChain provides abstractions to make working with LLMs easy\", k=2, filter=[{\"term\": {\"metadata.source.keyword\": \"tweet\"}}])\n",
+    "results = vector_store.similarity_search(\n",
+    "    query=\"LangChain provides abstractions to make working with LLMs easy\",\n",
+    "    k=2,\n",
+    "    filter=[{\"term\": {\"metadata.source.keyword\": \"tweet\"}}],\n",
+    ")\n",
     "for res in results:\n",
     "    print(f\"* {res.page_content} [{res.metadata}]\")"
    ]
@@ -404,7 +418,11 @@
     }
    ],
    "source": [
-    "results = vector_store.similarity_search_with_score(query=\"Will it be hot tomorrow\",k=1, filter=[{\"term\": {\"metadata.source.keyword\": \"news\"}}])\n",
+    "results = vector_store.similarity_search_with_score(\n",
+    "    query=\"Will it be hot tomorrow\",\n",
+    "    k=1,\n",
+    "    filter=[{\"term\": {\"metadata.source.keyword\": \"news\"}}],\n",
+    ")\n",
     "for doc, score in results:\n",
     "    print(f\"* [SIM={score:3f}] {doc.page_content} [{doc.metadata}]\")"
    ]
@@ -441,8 +459,7 @@
    ],
    "source": [
     "retriever = vector_store.as_retriever(\n",
-    "    search_type=\"similarity_score_threshold\",\n",
-    "    search_kwargs={'score_threshold': 0.2}\n",
+    "    search_type=\"similarity_score_threshold\", search_kwargs={\"score_threshold\": 0.2}\n",
     ")\n",
     "retriever.invoke(\"Stealing from the bank is a crime\")"
    ]
@@ -501,8 +518,10 @@
     "\n",
     "prompt = hub.pull(\"rlm/rag-prompt\")\n",
     "\n",
+    "\n",
     "def format_docs(docs):\n",
     "    return \"\\n\\n\".join(doc.page_content for doc in docs)\n",
+    "\n",
     "\n",
     "rag_chain = (\n",
     "    {\"context\": retriever | format_docs, \"question\": RunnablePassthrough()}\n",
@@ -619,32 +638,15 @@
     "  strategy=DenseVectorScriptScoreStrategy()\n",
     ")\n",
     "\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "3cff8421",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "ObjectApiResponse({'acknowledged': True})"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
+    "```\n",
+    "\n",
+    "```python\n",
     "db.client.indices.delete(\n",
     "    index=\"test-metadata, test-elser, test-basic\",\n",
     "    ignore_unavailable=True,\n",
     "    allow_no_indices=True,\n",
-    ")"
+    ")\n",
+    "```"
    ]
   },
   {
