--- a/docs/docs/integrations/vectorstores/qdrant.ipynb
+++ b/docs/docs/integrations/vectorstores/qdrant.ipynb
@@ -191,6 +191,7 @@
    "outputs": [],
    "source": [
     "url = \"<---qdrant url here --->\"\n",
+    "docs = []  # put docs here\n",
     "qdrant = QdrantVectorStore.from_documents(\n",
     "    docs,\n",
     "    embeddings,\n",
@@ -306,63 +307,75 @@
     }
    ],
    "source": [
-    "from langchain_core.documents import Document\n",
     "from uuid import uuid4\n",
+    "\n",
+    "from langchain_core.documents import Document\n",
     "\n",
     "document_1 = Document(\n",
     "    page_content=\"I had chocalate chip pancakes and scrambled eggs for breakfast this morning.\",\n",
-    "    metadata={\"source\": \"tweet\"}\n",
+    "    metadata={\"source\": \"tweet\"},\n",
     ")\n",
     "\n",
     "document_2 = Document(\n",
     "    page_content=\"The weather forecast for tomorrow is cloudy and overcast, with a high of 62 degrees.\",\n",
-    "    metadata={\"source\": \"news\"}\n",
+    "    metadata={\"source\": \"news\"},\n",
     ")\n",
     "\n",
     "document_3 = Document(\n",
     "    page_content=\"Building an exciting new project with LangChain - come check it out!\",\n",
-    "    metadata={\"source\": \"tweet\"}\n",
+    "    metadata={\"source\": \"tweet\"},\n",
     ")\n",
     "\n",
     "document_4 = Document(\n",
     "    page_content=\"Robbers broke into the city bank and stole $1 million in cash.\",\n",
-    "    metadata={\"source\": \"news\"}\n",
+    "    metadata={\"source\": \"news\"},\n",
     ")\n",
     "\n",
     "document_5 = Document(\n",
     "    page_content=\"Wow! That was an amazing movie. I can't wait to see it again.\",\n",
-    "    metadata={\"source\": \"tweet\"}\n",
+    "    metadata={\"source\": \"tweet\"},\n",
     ")\n",
     "\n",
     "document_6 = Document(\n",
     "    page_content=\"Is the new iPhone worth the price? Read this review to find out.\",\n",
-    "    metadata={\"source\": \"website\"}\n",
+    "    metadata={\"source\": \"website\"},\n",
     ")\n",
     "\n",
     "document_7 = Document(\n",
     "    page_content=\"The top 10 soccer players in the world right now.\",\n",
-    "    metadata={\"source\": \"website\"}\n",
+    "    metadata={\"source\": \"website\"},\n",
     ")\n",
     "\n",
     "document_8 = Document(\n",
     "    page_content=\"LangGraph is the best framework for building stateful, agentic applications!\",\n",
-    "    metadata={\"source\": \"tweet\"}\n",
+    "    metadata={\"source\": \"tweet\"},\n",
     ")\n",
     "\n",
     "document_9 = Document(\n",
     "    page_content=\"The stock market is down 500 points today due to fears of a recession.\",\n",
-    "    metadata={\"source\": \"news\"}\n",
+    "    metadata={\"source\": \"news\"},\n",
     ")\n",
     "\n",
     "document_10 = Document(\n",
     "    page_content=\"I have a bad feeling I am going to get deleted :(\",\n",
-    "    metadata={\"source\": \"tweet\"}\n",
+    "    metadata={\"source\": \"tweet\"},\n",
     ")\n",
     "\n",
-    "documents = [document_1, document_2, document_3, document_4, document_5, document_6, document_7, document_8, document_9, document_10]\n",
+    "documents = [\n",
+    "    document_1,\n",
+    "    document_2,\n",
+    "    document_3,\n",
+    "    document_4,\n",
+    "    document_5,\n",
+    "    document_6,\n",
+    "    document_7,\n",
+    "    document_8,\n",
+    "    document_9,\n",
+    "    document_10,\n",
+    "]\n",
     "uuids = [str(uuid4()) for _ in range(len(documents))]\n",
     "\n",
-    "vector_store.add_documents(documents=documents,ids=uuids)"
+    "vector_store.add_documents(documents=documents, ids=uuids)"
    ]
   },
   {
@@ -436,7 +449,9 @@
     }
    ],
    "source": [
-    "results = vector_store.similarity_search(\"LangChain provides abstractions to make working with LLMs easy\", k=2)\n",
+    "results = vector_store.similarity_search(\n",
+    "    \"LangChain provides abstractions to make working with LLMs easy\", k=2\n",
+    ")\n",
     "for res in results:\n",
     "    print(f\"* {res.page_content} [{res.metadata}]\")"
    ]
@@ -539,7 +554,9 @@
     }
    ],
    "source": [
-    "results = vector_store.similarity_search_with_score(query=\"Will it be hot tomorrow\",k=1)\n",
+    "results = vector_store.similarity_search_with_score(\n",
+    "    query=\"Will it be hot tomorrow\", k=1\n",
+    ")\n",
     "for doc, score in results:\n",
     "    print(f\"* [SIM={score:3f}] {doc.page_content} [{doc.metadata}]\")"
    ]
@@ -574,13 +591,20 @@
    "source": [
     "from qdrant_client.http import models\n",
     "\n",
-    "results = vector_store.similarity_search(query=\"Who are the best soccer players in the world?\",k=1,filter=models.Filter(should=[\n",
+    "results = vector_store.similarity_search(\n",
+    "    query=\"Who are the best soccer players in the world?\",\n",
+    "    k=1,\n",
+    "    filter=models.Filter(\n",
+    "        should=[\n",
     "            models.FieldCondition(\n",
     "                key=\"page_content\",\n",
-    "                match=models.MatchValue(value=\"The top 10 soccer players in the world right now.\"),\n",
+    "                match=models.MatchValue(\n",
+    "                    value=\"The top 10 soccer players in the world right now.\"\n",
+    "                ),\n",
     "            ),\n",
     "        ]\n",
-    "))\n",
+    "    ),\n",
+    ")\n",
     "for doc in results:\n",
     "    print(f\"* {doc.page_content} [{doc.metadata}]\")"
    ]
@@ -619,10 +643,7 @@
     }
    ],
    "source": [
-    "retriever = vector_store.as_retriever(\n",
-    "    search_type=\"mmr\",\n",
-    "    search_kwargs={\"k\": 1}\n",
-    ")\n",
+    "retriever = vector_store.as_retriever(search_type=\"mmr\", search_kwargs={\"k\": 1})\n",
     "retriever.invoke(\"Stealing from the bank is a crime\")"
    ]
   },
@@ -680,8 +701,10 @@
     "\n",
     "prompt = hub.pull(\"rlm/rag-prompt\")\n",
     "\n",
+    "\n",
     "def format_docs(docs):\n",
     "    return \"\\n\\n\".join(doc.page_content for doc in docs)\n",
+    "\n",
     "\n",
     "rag_chain = (\n",
     "    {\"context\": retriever | format_docs, \"question\": RunnablePassthrough()}\n",
@@ -717,10 +740,12 @@
    },
    "outputs": [],
    "source": [
+    "from langchain_qdrant import RetrievalMode, SparseEmbeddings\n",
+    "\n",
     "QdrantVectorStore.from_documents(\n",
     "    docs,\n",
     "    embedding=embeddings,\n",
-    "    sparse_embedding=sparse_embeddings,\n",
+    "    sparse_embedding=SparseEmbeddings(),\n",
     "    location=\":memory:\",\n",
     "    collection_name=\"my_documents_2\",\n",
     "    retrieval_mode=RetrievalMode.HYBRID,\n",
