--- a/docs/docs/integrations/tools/financial_datasets.ipynb
+++ b/docs/docs/integrations/tools/financial_datasets.ipynb
@@ -7,12 +7,21 @@
     "id": "245a954a"
    },
    "source": [
-    "# Stock market API tools using financialdatasets.ai\n",
-    "\n",
-    "> The [financial datasets](https://financialdatasets.ai/) stock market API provides REST endpoints that let you get financial data for 16,000+ tickers spanning 30+ years.\n",
-    "> This notebook creates an Agent, which has tools for getting financial data from income statements, balance sheets, and cash flow statements for a ticker.\n",
-    "> You can ask the Agent any financial question and the agent will pull fundamental data from financial datasets to answer your question."
+    "# Financial Datasets - Stock Market API"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "The [financial datasets](https://financialdatasets.ai/) stock market API provides REST endpoints that let you get financial data for 16,000+ tickers spanning 30+ years.\n",
+    "\n",
+    "This notebook creates an Agent, which has tools for getting financial data from income statements, balance sheets, and cash flow statements for a ticker.\n",
+    "\n",
+    "You can ask the Agent any financial question and the agent will pull fundamental data from financial datasets to answer your question."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
