--- a/docs/docs/integrations/tools/financial_datasets.ipynb
+++ b/docs/docs/integrations/tools/financial_datasets.ipynb
@@ -24,6 +24,15 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "### Setup imports"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "id": "8fd7dad3-370b-4653-9c78-97d4da605c06",
@@ -49,6 +58,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "### Set API keys"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "34bb5968",
@@ -71,6 +89,15 @@
    "source": [
     "os.environ[\"OPENAI_API_KEY\"] = getpass.getpass()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Initialize toolkit"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
