--- a/docs/docs/integrations/tools/financial_datasets.ipynb
+++ b/docs/docs/integrations/tools/financial_datasets.ipynb
@@ -26,7 +26,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### Setup imports"
+    "## Setup imports"
    ],
    "metadata": {
     "collapsed": false
@@ -60,7 +60,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### Set API keys"
+    "## Set API keys"
    ],
    "metadata": {
     "collapsed": false
@@ -93,7 +93,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### Initialize toolkit"
+    "## Initialize toolkit"
    ],
    "metadata": {
     "collapsed": false
@@ -142,7 +142,7 @@
    "id": "347f6951-b383-4675-b116-9b7d16c1f505",
    "metadata": {},
    "source": [
-    "### Define system prompt"
+    "## Define system prompt"
    ]
   },
   {
@@ -191,7 +191,7 @@
    "id": "fc300e1d-9abf-40a5-8e25-869a70545550",
    "metadata": {},
    "source": [
-    "### Create LLM"
+    "## Create LLM"
    ]
   },
   {
@@ -212,7 +212,7 @@
    "id": "d0e47471-e2eb-4d54-ad2c-1234d9b1a351",
    "metadata": {},
    "source": [
-    "### Set user query"
+    "## Set user query"
    ]
   },
   {
@@ -230,7 +230,7 @@
    "id": "c735e503-38a5-4666-bde1-4e215da1c390",
    "metadata": {},
    "source": [
-    "### Create agent"
+    "## Create agent"
    ]
   },
   {
@@ -262,7 +262,7 @@
    "id": "fcf55812-a669-4580-a470-d78c0bc926a8",
    "metadata": {},
    "source": [
-    "### Ask question"
+    "## Ask question"
    ]
   },
   {
