Echo user input for rendering by GitHub

--- a/cookbook_ru/yandex_search/tool.ipynb
+++ b/cookbook_ru/yandex_search/tool.ipynb
@@ -223,53 +223,56 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "User:  Привет! Как дела?\n"
+      "User: Привет! Как дела?\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "User: Привет! Как дела?\n",
       "\n",
       "\n",
       "\u001b[1m> Entering new AgentExecutor chain...\u001b[0m\n",
-      "\u001b[32;1m\u001b[1;3mЗдравствуйте! Я генеративная языковая модель, поэтому у меня не может быть дел в привычном понимании этого слова. Но я всегда готова ответить на ваши вопросы или поддержать беседу.\u001b[0m\n",
+      "\u001b[32;1m\u001b[1;3mЗдравствуйте! Я генеративная языковая модель, поэтому у меня не может быть собственных дел. Но я всегда готова ответить на ваши вопросы или поддержать беседу.\u001b[0m\n",
       "\n",
       "\u001b[1m> Finished chain.\u001b[0m\n",
-      "Agent: Здравствуйте! Я генеративная языковая модель, поэтому у меня не может быть дел в привычном понимании этого слова. Но я всегда готова ответить на ваши вопросы или поддержать беседу.\n"
+      "Agent: Здравствуйте! Я генеративная языковая модель, поэтому у меня не может быть собственных дел. Но я всегда готова ответить на ваши вопросы или поддержать беседу.\n"
      ]
     },
     {
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "User:  Почему небо голубое?\n"
+      "User: Почему небо голубое?\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "User: Почему небо голубое?\n",
       "\n",
       "\n",
       "\u001b[1m> Entering new AgentExecutor chain...\u001b[0m\n",
-      "\u001b[32;1m\u001b[1;3mМолекулы воздуха рассеивают солнечный свет. Свет с короткой длиной волны (голубой) рассеивается сильнее, чем свет с длинной волной (красный). Поэтому мы видим голубое небо.\u001b[0m\n",
+      "\u001b[32;1m\u001b[1;3mНа самом деле цвет неба определяется рассеянием света в атмосфере. Солнечный свет состоит из волн разной длины, которые воспринимаются нашим глазом как разные цвета (красный, оранжевый, желтый, зеленый, голубой, синий, фиолетовый). Короткие волны, а именно голубые и синие, рассеиваются сильнее всего. Поэтому мы видим небо голубым.\u001b[0m\n",
       "\n",
       "\u001b[1m> Finished chain.\u001b[0m\n",
-      "Agent: Молекулы воздуха рассеивают солнечный свет. Свет с короткой длиной волны (голубой) рассеивается сильнее, чем свет с длинной волной (красный). Поэтому мы видим голубое небо.\n"
+      "Agent: На самом деле цвет неба определяется рассеянием света в атмосфере. Солнечный свет состоит из волн разной длины, которые воспринимаются нашим глазом как разные цвета (красный, оранжевый, желтый, зеленый, голубой, синий, фиолетовый). Короткие волны, а именно голубые и синие, рассеиваются сильнее всего. Поэтому мы видим небо голубым.\n"
      ]
     },
     {
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "User:  Кто выиграл ЕВРО-2024?\n"
+      "User: Кто выиграл ЕВРО-2024?\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "User: Кто выиграл ЕВРО-2024?\n",
       "\n",
       "\n",
       "\u001b[1m> Entering new AgentExecutor chain...\u001b[0m\n",
@@ -277,23 +280,24 @@
       "Invoking: `yandex_search_results_json` with `{'query': 'кто выиграл евро-2024'}`\n",
       "\n",
       "\n",
-      "\u001b[0m\u001b[36;1m\u001b[1;3m[{'url': 'https://meduza.io/feature/2024/07/15/evro-2024-zakonchilsya-ispaniya-chempion', 'content': '14 июля сборная Испании в финале Евро-2024 обыграла Англию со счетом 2:1 и в четвертый раз стала чемпионом Европы по футболу (это рекорд!) Финальный матч проходил на Олимпийском стадионе в Берлине. Болельщики обеих сборных следили за игрой в самых разных местах — в пабах, кафе, фан-зонах, на улицах и стадионах.'}, {'url': 'https://novayagazeta.eu/articles/2024/07/16/oshibki-veteranov-pobedy-novichkov-mnogo-politiki', 'content': 'Главные наблюдения после Евро-2024.\\nПодводим итоги Евро-2024 — каким участники и зрители запомнят этот чемпионат? Звездные сборные разочаровали. Перед турниром казалось, что есть несколько очевидных фаворитов: суперзвездная Франция, Англия с самым дорогим составом, сборная Италии с «футболом будущего», Португалия с яркой атакующей группой.'}, {'url': 'https://www.nur.kz/sport/football/2133837-sbornaya-ispanii-obygrala-angliyu-i-stala-chempionom-evropy-po-futbolu/', 'content': 'Футболисты сборной Испании в финале Евро-2024.\\nИспанцы выиграли со счетом 2:1. В составе победителей отличились Нико Уильямс (47 минута) и Микель Оярсабаль (86), которым ассистировали Ламин Ямаль и Марк Кукурелья соответственно. Единственный мяч англичан с передачи Джуда Беллингема забил Коул Палмер (73). Сборная Испании единолично стала самой титулованной командой в истории чемпионатов Европы.'}, {'url': 'https://journal.tinkoff.ru/news/spain-wins-euro-2024-final/', 'content': 'Сборная Испании обыграла Англию в финале Евро-2024.\\nСборная выиграла все три игры группового этапа и набрала максимальное число очков. В плей-офф она разгромила Грузию со счетом 4:1, затем победила Германию — одну из самых результативных команд турнира — со счетом 2:1, а в полуфинале с таким же результатом прошла Францию. В итоге сборная выиграла во всех семи матчах розыгрыша.'}, {'url': 'https://ru.uefa.com/euro2024/news/028f-1b4e6c936ec4-43c850dd0239-1000--%D0%B4%D0%BE%D1%81%D1%8C%D0%B5-%D0%BF/', 'content': 'Лучший результат на ЕВРО : победитель (1964, 2008, 2012, 2024) Предыдущие финалы на ЕВРО: 1964 (победа над СССР), 1984 (поражение от Франции), 2008 (победа над Германией), 2012 (победа над Италией) ЕВРО-2020 : 1/2 финала - 1:1, пен. 2:4 против Италии. Путь к трофею Испанцы выиграли все семь матчей на ЕВРО-2024, забив в общей сложности 15 голов при четырех пропущенных.'}, {'url': 'https://www.rfi.fr/ru/%D1%81%D0%BF%D0%BE%D1%80%D1%82/20240714-%D1%81%D0%B1%D0%BE%D1%80%D0%BD%D0%B0%D1%8F-%D0%B8%D1%81%D0%BF%D0%B0%D0%BD%D0%B8%D0%B8-%D0%B2%D1%8B%D0%B8%D0%B3%D1%80%D0%B0%D0%BB%D0%B0-%D0%B5%D0%B2%D1%80%D0%BE-2024', 'content': 'Сборная Испании выиграла Евро-2024. Финальный матч между Испанией и Англией завершился со счетом 2:1. Испания в четвертый раз стала победительницей европейского первенства.\\nНико Уильямс радуется открытию счета в финале Евро-2024 © AFP / INA FASSBENDER. При этом у обеих сборных в первом тайме в активе было по одному удару в створ.'}, {'url': 'https://www.bbc.com/russian/articles/ckmg6zn74xlo', 'content': 'Сборная Испании по футболу выиграла Евро-2024, одолев в захватывающем финале англичан, не сумевших повторить триумф женской сборной на Евро-2022. Испанцы полностью доминировали в игре и заслуженно стали чемпионами континента в четвертый раз. Англичане второй раз подряд выходят в финал европейского чемпионата.'}, {'url': 'https://tr-page.yandex.ru/translate?lang=en-ru&url=https%3A%2F%2Fen.wikipedia.org%2Fwiki%2FUEFA_Euro_2024_final', 'content': 'Финал Евро-2024 - футбольный матч, в котором определялись победители Евро-2024.\\nДжорджо Кьеллини, капитан сборной Италии, выигравшей Евро-2020, и бывший товарищ Мораты по команде, вынес трофей на поле для церемонии.[55] Испания стала первыми чемпионами Европы, выигравшими все свои групповые матчи и матчи на выбывание без серии пенальти со времен Франции в 1984 году.'}, {'url': 'https://holod.media/2024/07/14/vyigrala-evro-2024/', 'content': 'Первой в финал Евро-2024 вышла сборная Испании, обыграв сборную Франции со счетом 2:1. Матч состоялся 9 июля. На следующий день сборная Англии обыграла команду Нидерландов с таким же счетом.\\nВсего на Евро Испания и Англия встречались два раза, матч в рамках чемпионата 2024 года стал третьим. Оба раза сборная Англии обыграла сборную Испании.'}, {'url': 'https://ru.euronews.com/2024/07/15/euro-2024-final-spain-beat-england', 'content': 'Авторское право Frank Augstein/Copyright 2024 The AP.\\nВ числе поверженных соперников - практически все другие фавориты турнира - Италия в группе, Германия, Франция, а в финале - Англия. Сборная Испании подтвердила свой статус одной из сильнейших команд мира, в рекордный, четвертый раз выиграв европейское первенство.'}]\u001b[0m\u001b[32;1m\u001b[1;3mСборная Испании выиграла чемпионат Европы по футболу в 2024 году. В финале они обыграли Англию со счетом 2:1. Это уже четвертая победа Испании на чемпионате Европы.\u001b[0m\n",
+      "\u001b[0m\u001b[36;1m\u001b[1;3m[{'url': 'https://meduza.io/feature/2024/07/15/evro-2024-zakonchilsya-ispaniya-chempion', 'content': '14 июля сборная Испании в финале Евро-2024 обыграла Англию со счетом 2:1 и в четвертый раз стала чемпионом Европы по футболу (это рекорд!) Финальный матч проходил на Олимпийском стадионе в Берлине. Болельщики обеих сборных следили за игрой в самых разных местах — в пабах, кафе, фан-зонах, на улицах и стадионах.'}, {'url': 'https://ru.wikipedia.org/wiki/%D0%A7%D0%B5%D0%BC%D0%BF%D0%B8%D0%BE%D0%BD%D0%B0%D1%82_%D0%95%D0%B2%D1%80%D0%BE%D0%BF%D1%8B_%D0%BF%D0%BE_%D1%84%D1%83%D1%82%D0%B1%D0%BE%D0%BB%D1%83_2024', 'content': 'Чемпионат Европы по футболу 2024 года (англ. 2024 UEFA European Football Championship или Евро-2024, UEFA Euro 2024 нем.'}, {'url': 'https://www.nur.kz/sport/football/2133837-sbornaya-ispanii-obygrala-angliyu-i-stala-chempionom-evropy-po-futbolu/', 'content': 'Футболисты сборной Испании в финале Евро-2024.\\nИспанцы выиграли со счетом 2:1. В составе победителей отличились Нико Уильямс (47 минута) и Микель Оярсабаль (86), которым ассистировали Ламин Ямаль и Марк Кукурелья соответственно. Единственный мяч англичан с передачи Джуда Беллингема забил Коул Палмер (73). Сборная Испании единолично стала самой титулованной командой в истории чемпионатов Европы.'}, {'url': 'https://novayagazeta.eu/articles/2024/07/16/oshibki-veteranov-pobedy-novichkov-mnogo-politiki', 'content': 'Главные наблюдения после Евро-2024.\\nПодводим итоги Евро-2024 — каким участники и зрители запомнят этот чемпионат? Звездные сборные разочаровали. Перед турниром казалось, что есть несколько очевидных фаворитов: суперзвездная Франция, Англия с самым дорогим составом, сборная Италии с «футболом будущего», Португалия с яркой атакующей группой.'}, {'url': 'https://ru.uefa.com/euro2024/news/028f-1b4e6c936ec4-43c850dd0239-1000--%D0%B4%D0%BE%D1%81%D1%8C%D0%B5-%D0%BF/', 'content': 'Лучший результат на ЕВРО : победитель (1964, 2008, 2012, 2024) Предыдущие финалы на ЕВРО: 1964 (победа над СССР), 1984 (поражение от Франции), 2008 (победа над Германией), 2012 (победа над Италией) ЕВРО-2020 : 1/2 финала - 1:1, пен. 2:4 против Италии. Путь к трофею Испанцы выиграли все семь матчей на ЕВРО-2024, забив в общей сложности 15 голов при четырех пропущенных.'}, {'url': 'https://www.bbc.com/russian/articles/ckmg6zn74xlo', 'content': 'Сборная Испании по футболу выиграла Евро-2024, одолев в захватывающем финале англичан, не сумевших повторить триумф женской сборной на Евро-2022. Испанцы полностью доминировали в игре и заслуженно стали чемпионами континента в четвертый раз. Англичане второй раз подряд выходят в финал европейского чемпионата.'}, {'url': 'https://www.championat.com/football/article-5630576-sbornaya-ispanii-chempion-evro-2024-v-chyom-sila-komandy-de-la-fuente-pochemu-ona-vyigrala-chempionat-evropy-mnenie.html', 'content': 'Такие люди, как Родри , часто выигрывают финалы. Чаще не голами или ассистами, а мощным влиянием на игру.\\nМартин Субименди в финале Евро-2024. Фото: Stu Forster/Getty Images. До финала Субименди целиком отыграл матч с Албанией, который ничего не решал для испанцев, и вышел на пару минут против Франции.'}, {'url': 'https://holod.media/2024/07/14/vyigrala-evro-2024/', 'content': 'Первой в финал Евро-2024 вышла сборная Испании, обыграв сборную Франции со счетом 2:1. Матч состоялся 9 июля. На следующий день сборная Англии обыграла команду Нидерландов с таким же счетом.\\nВсего на Евро Испания и Англия встречались два раза, матч в рамках чемпионата 2024 года стал третьим. Оба раза сборная Англии обыграла сборную Испании.'}, {'url': 'https://www.vesty.co.il/main/sports/article/wvxblghk5', 'content': 'Таким образом Испания стала чемпионом Европы, став самой титулованной командой по числу побед на Евро. Ранее испанцы выигрывали чемпионаты Европы в 1964, 2008 и 2012 годах. Сборная Англии во второй раз подряд проиграла в финале чемпионата Европы. На Евро-2020 англичане уступили команде Италии (1:1, 2:3 пен.).'}, {'url': 'https://www.sport-express.ru/football/euro/reviews/ispaniya-vyigrala-chempionat-evropy-2024-po-futbolu-mnenie-rabinera-o-finale-i-itogah-turnira-v-germanii-2233404/', 'content': 'Но иногда молодого суперталанта не берут, а команда побеждает — так, как это произошло со сборной Аргентины на домашнем для нее ЧМ-1978, когда главный тренер Сесар Луис Менотти не вызвал юного Диего Марадону, но «Альбиселесте» впервые выиграли мировое первенство.\\nБензема считает, что Испания заслуженно победила на Евро-2024.'}]\u001b[0m\u001b[32;1m\u001b[1;3mСборная Испании выиграла Евро-2024, обыграв в финале Англию со счетом 2:1. Это уже четвертая победа Испании на чемпионате Европы по футболу.\u001b[0m\n",
       "\n",
       "\u001b[1m> Finished chain.\u001b[0m\n",
-      "Agent: Сборная Испании выиграла чемпионат Европы по футболу в 2024 году. В финале они обыграли Англию со счетом 2:1. Это уже четвертая победа Испании на чемпионате Европы.\n"
+      "Agent: Сборная Испании выиграла Евро-2024, обыграв в финале Англию со счетом 2:1. Это уже четвертая победа Испании на чемпионате Европы по футболу.\n"
      ]
     },
     {
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "User:  Спасибо!\n"
+      "User: Спасибо!\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "User: Спасибо!\n",
       "\n",
       "\n",
       "\u001b[1m> Entering new AgentExecutor chain...\u001b[0m\n",
@@ -307,20 +311,22 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "User:  q\n"
+      "User: q\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "User: q\n",
       "До свидания!\n"
      ]
     }
    ],
    "source": [
     "while True:\n",
-    "    user_input = input(\"User: \")\n",
+    "    user_input = input(\"User:\")\n",
+    "    print(f\"User: {user_input}\")\n",
     "    \n",
     "    if user_input.lower() in [\"quit\", \"exit\", \"q\"]:\n",
     "        print(\"До свидания!\")\n",
