--- a/docs/docs/versions/migrating_chains/index.mdx
+++ b/docs/docs/versions/migrating_chains/index.mdx
@@ -32,6 +32,7 @@ The below pages assist with migration from various specific chains to LCEL:
 - [ConversationalRetrievalChain](/docs/versions/migrating_chains/conversation_retrieval_chain)
 - [StuffDocumentsChain](/docs/versions/migrating_chains/stuff_docs_chain)
 - [MapReduceDocumentsChain](/docs/versions/migrating_chains/map_reduce_chain)
+- [MapRerankDocumentsChain](/docs/versions/migrating_chains/map_rerank_docs_chain)
 - [RefineDocumentsChain](/docs/versions/migrating_chains/refine_docs_chain)
 - [LLMRouterChain](/docs/versions/migrating_chains/llm_router_chain)
 - [MultiPromptChain](/docs/versions/migrating_chains/multi_prompt_chain)
