--- a/docs/docs/how_to/qa_sources.ipynb
+++ b/docs/docs/how_to/qa_sources.ipynb
@@ -363,7 +363,10 @@
     "# - add `.with_structured_output` to the LLM;\n",
     "# - remove the output parser\n",
     "rag_chain_from_docs = (\n",
-    "    {\"input\": lambda x: x[\"input\"], \"context\": lambda x: format_docs(x[\"context\"])}\n",
+    "    {\n",
+    "        \"input\": lambda x: x[\"input\"],\n",
+    "        \"context\": lambda x: format_docs(x[\"context\"]),\n",
+    "    }\n",
     "    | prompt\n",
     "    | llm.with_structured_output(AnswerWithSources)\n",
     ")\n",
